syntax = "proto3";
package plugins.gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/plugins";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

message SubsetSpec {
    repeated Selector selectors =1;
}

message Selector {
    repeated string keys = 1;
}
